fixed the search overlap and trying to resolve the spacing issues for the labels

--- a/css/style.css
+++ b/css/style.css
@@ -2156,3 +2156,15 @@ background: linear-gradient(90deg, rgba(32, 80, 119, 1) 0%, rgba(9, 9, 121, 0.75
   font-style: italic;
   opacity: 0.7;
 }
+
+
+.highlight-link {
+  text-decoration: none;
+  display: block;
+}
+
+.highlight-link:hover .highlight-card {
+  background: rgba(255, 255, 255, 0.7);
+  transform: translateX(8px);
+  transition: 0.2s ease-in-out;
+}
